--- a/myfoodapp/food/templates/food/index.html
+++ b/myfoodapp/food/templates/food/index.html
@@ -13,7 +13,7 @@
 {% for item in item_list %}
     <ul>
         <li>
-            <a href="/food/{{ item.id }}">{{ item.id }}---{{ item.item_name }}</a>
+            <a href= {% url "food:detail" item.id %}>{{ item.id }}---{{ item.item_name }}</a>
 
         </li>
 </ul>
