--- a/myfoodapp/food/templates/food/detail.html
+++ b/myfoodapp/food/templates/food/detail.html
@@ -1,3 +1,15 @@
-<h1>{{item.item_name}}</h1>
-<h2>{{item.item_descp}}</h2>
-<h3>{{item.item_price}}</h3>
+{% extends "food/base.html" %}
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img height="300px" src="{{item.item_image}}" class="fluid">
+        </div>
+        <div class="col-md-6">
+            <h1>{{item.item_name}}</h1>
+            <h2>{{item.item_descp}}</h2>
+            <h3>kes {{item.item_price}}</h3>
+        </div>
+    </div>
+</div>
+{% endblock  %}
