--- a/myfoodapp/food/templates/food/index.html
+++ b/myfoodapp/food/templates/food/index.html
@@ -1,19 +1,9 @@
 {% extends "food/base.html" %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Document</title>
-    
-</head>
-<body>
  {% block body %}
   
  {% for item in item_list %}
     <div class="row">
-        <div class="col-md-3 offset-md-2">
+        <div class="col-md-5">
             <img class="img-card" height="150px" src="{{ item.item_image }}">
         </div>
         <div class="col-md-4">
